added navbar , hero section and readme file

--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 
 <head>
   <meta charset="UTF-8" />
+  <link rel="icon" type="image/.png" href="./images/Logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Raaya Socail</title>
+
+  <!-- css styles -->
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/navbar.css" />
+  <link rel="stylesheet" href="css/heroSection.css" />
+  <link rel="stylesheet" href="css/ourClient.css" />
+  <link rel="stylesheet" href="css/creativeServices.css" />
   <link rel="stylesheet" href="css/services.css" />
   <link rel="stylesheet" href="css/videos.css" />
   <link rel="stylesheet" href="css/shortVideo.css" />
@@ -13,12 +20,25 @@
 </head>
 
 <body>
-  <header>
-    <!-- Navigation -->
+
+  <header id="navbarHeader">
+    <nav id="mainNavbar"></nav>
   </header>
 
   <main>
     <!-- Hero Section -->
+    <section id="hero-section"></section>
+
+    <!-- Our client section start -->
+    <section id="featured-client">
+    </section>
+    <!-- Our client section end -->
+
+    <!-- creative services section start -->
+    <section id="creative-service">
+
+    </section>
+    <!-- creative services section end -->
 
     <!-- services section start  -->
     <section id="services-section">
@@ -103,6 +123,10 @@
   <!-- Footer section end -->
 
   <!-- js files -->
+  <script src="js/navbar.js"></script>
+  <script src="js/heroSection.js"></script>
+  <script src="js/ourClient.js"></script>
+  <script src="js/creativeServices.js"></script>
   <script src="js/services.js"></script>
   <script src="js/videos.js"></script>
   <script src="js/shortVideo.js"></script>
